# gemini-to-openai-tts

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  README_EN.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  logging.py  security.py
app/models/: schemas.py
app/services/: audio_processor.py  gemini_client.py
app/utils/: error_handlers.py
scripts/: dev-setup.sh
